<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical">


    <TextView
        android:id="@+id/text_parking_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_parking_size_text"/>


    <EditText
        android:id="@+id/input_parking_quantity_slots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_parking_size_hint"
        android:inputType="number"
        android:layout_marginTop="25dp"/>

    <TextView
    android:id="@+id/text_parking_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25sp"/>

    <Button
        android:id="@+id/button_parking_add_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_parking_add_size" />

</LinearLayout>