<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ParkingActivity">

    <TextView
        android:id="@+id/text_parking_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_parking_size_text"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@id/input_parking_quantity_slots"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/input_parking_quantity_slots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:padding="16dp"
        android:hint="@string/input_parking_size_hint"
        android:textColorHint="@color/design_default_color_primary_variant"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_parking_size" />

    <Button
        android:id="@+id/button_parking_add_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_parking_add_size"
        app:layout_constraintTop_toBottomOf="@id/input_parking_quantity_slots"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>