<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/reservation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_parking_quantity_text"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@id/start_date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/start_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/date_start_datetime_hint"
            android:inputType="datetime"
            android:textColorHint="@color/design_default_color_primary_variant"
            app:layout_constraintBottom_toTopOf="@id/end_date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reservation_view" />

        <EditText
            android:id="@+id/end_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/date_end_datetime_hint"
            android:inputType="datetime"
            android:textColorHint="@color/design_default_color_primary_variant"
            app:layout_constraintBottom_toTopOf="@id/input_parking_lot_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_date_time" />

        <EditText
            android:id="@+id/input_parking_lot_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_parking_lot_number_hint"
            android:inputType="number"
            android:textColorHint="@color/design_default_color_primary_variant"
            app:layout_constraintBottom_toTopOf="@id/input_security_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/end_date_time" />

        <EditText
            android:id="@+id/input_security_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_security_code_hint"
            android:inputType="textPassword"
            android:maxLength="5"
            android:textColorHint="@color/design_default_color_primary_variant"
            app:layout_constraintBottom_toTopOf="@id/button_parking_add_new_reservation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_parking_lot_number" />

        <Button
            android:id="@+id/button_parking_add_new_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_parking_add_new_reservation_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_parking_lot_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>